--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-create.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-create.html
@@ -164,6 +164,7 @@
                 this.create.size = parseInt(this.create.size);
                 this.$.firebase.saveValue('boats')
                     .then(() => {
+                        console.log(this.$.firebase.path)
                         this.$.firebase.setStoredValue(this.$.firebase.path, this.create);
                         this._resetCreate();
                         let _key = '';
