--- a/elements/crew-team-manager-roster/crew-team-manager-roster-detail-results.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-detail-results.html
@@ -77,7 +77,7 @@
                         Contact information:
                     </div>
                     <div id="location">
-                        [[data.streetAddress]], [[data.city]], [[data.state]]
+                        [[data.streetAddress]]. [[data.city]]. [[data.state]]
                     </div>
                     <div id="phone">
                         Phone number: [[data.phone]]
