--- a/elements/crew-team-manager-roster/crew-team-manager-roster-list.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-list.html
@@ -45,14 +45,8 @@
                 position: relative;
             }
 
-            #loading {
-                @apply(--layout-fit);
-            }
-
-            #results {
-                @apply(--layout-fit);
-            }
-
+            #loading,
+            #results,
             #message {
                 @apply(--layout-fit);
             }
