--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-oar-list.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-oar-list.html
@@ -15,10 +15,10 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<dom-module id="crew-team-manager-oar-list">
-    <link rel="lazy-import" group="loading" href="../crew-team-manager-oar/crew-team-manager-oar-list-loading.html">
-    <link rel="lazy-import" group="results" href="../crew-team-manager-oar/crew-team-manager-oar-list-results.html">
-    <link rel="lazy-import" group="message" href="../crew-team-manager-oar/crew-team-manager-oar-list-message.html">
+<dom-module id="crew-team-manager-fleet-oar-list">
+    <link rel="lazy-import" group="loading" href="crew-team-manager-fleet-oar-list-loading.html">
+    <link rel="lazy-import" group="results" href="crew-team-manager-fleet-oar-list-results.html">
+    <link rel="lazy-import" group="message" href="crew-team-manager-fleet-oar-list-message.html">
     <template>
         <style>
              :host {
@@ -33,6 +33,7 @@
 
             #layout {
                 @apply(--layout-vertical);
+                @apply(--layout-flex);
             }
 
             #toolbar {
@@ -45,14 +46,8 @@
                 position: relative;
             }
 
-            #loading {
-                @apply(--layout-fit);
-            }
-
-            #results {
-                @apply(--layout-fit);
-            }
-
+            #loading,
+            #results,
             #message {
                 @apply(--layout-fit);
             }
@@ -68,30 +63,31 @@
         <firebase-query app-name="laborsync-ctm" id="query" path="/teamOars/{{teamId}}" data="{{_data}}">
         </firebase-query>
 
-        <app-header-layout id="layout">
+        <app-header-layout id="layout" has-scrolling-region fullbleed>
 
-            <app-header reveals>
+            <app-header slot="header" reveals>
                 <app-toolbar id="toolbar">
                     <paper-icon-button id="back" icon="arrow-back" on-click="_handleActionBack"></paper-icon-button>
-                    <div main-title id="title">Select Athletes To Add</div>
+                    <div main-title id="title">Select Oars To Add</div>
                     <paper-icon-button id="add" icon="check" on-click="_handleActionAdd"></paper-icon-button>
                 </app-toolbar>
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
-                <crew-team-manager-oar-list-loading id="loading"></crew-team-manager-oar-list-loading>
-                <crew-team-manager-oar-list-results id="results" data="[[_data]]"></crew-team-manager-oar-list-results>
-                <crew-team-manager-oar-list-message id="message"></crew-team-manager-oar-list-message>
+                <crew-team-manager-fleet-oar-list-loading id="loading"></crew-team-manager-fleet-oar-list-loading>
+                <crew-team-manager-fleet-oar-list-results id="results" data="[[_data]]" on-crew-team-manager-fleet-roster-list-results-action-select-oar="_selectOars"></crew-team-manager-fleet-oar-list-results>
+                <crew-team-manager-fleet-oar-list-message id="message"></crew-team-manager-fleet-oar-list-message>
             </iron-pages>
+
         </app-header-layout>
 
     </template>
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerOarList extends Polymer.LazyImportsMixin(Polymer.Element) {
+        class crewTeamManagerFleetOarList extends Polymer.LazyImportsMixin(Polymer.Element) {
 
             static get is() {
-                return 'crew-team-manager-oar-list'
+                return 'crew-team-manager-fleet-oar-list'
             }
 
             static get observers() {
@@ -112,18 +108,46 @@
                         type: Object
                     },
 
-                    teamId: String
+                    teamId: String,
+
+                    selectOar: {
+                        type: Array,
+                        value: []
+                    }
 
                 }
+            }
+
+            _selectOars() {
+
+                for (let x = 0; x < this.selectedOars.length; x++) {
+                    if (this.selectedOars[x] == e.detail.oar) {
+                        this.selectedOars.splice(x, x);
+                        return;
+                    }
+                }
+
+                this.selectedOars.push(e.detail.oar)
+            }
+
+            _handleActionAdd() {
+                console.log('add athletes to the boat');
+                this.dispatchEvent(new CustomEvent(crewTeamManagerFleetOarList.is + '-action-add-oars', {
+                    bubbles: true,
+                    composed: true,
+                }));
+            }
+
+            _handleActionBack() {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerFleetOarList.is + '-action-back', {
+                    bubbles: true,
+                    composed: true,
+                }));
             }
 
             _changePage(page) {
 
                 this.importLazyGroup(page).then(function () {}.bind(this));
-            }
-
-            _handleActionAdd() {
-                console.log('add oars to the boat')
             }
 
             _updatePage(dataSplices) {
@@ -147,6 +171,6 @@
         }
 
         // Register custom element definition using standard platform API
-        customElements.define(crewTeamManagerOarList.is, crewTeamManagerOarList);
+        customElements.define(crewTeamManagerFleetOarList.is, crewTeamManagerFleetOarList);
     </script>
 </dom-module>
