--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list.html
@@ -18,9 +18,9 @@
 
 
 <dom-module id="crew-team-manager-fleet-roster-list">
-    <link rel="lazy-import" group="loading" href="../crew-team-manager-roster/crew-team-manager-roster-list-loading.html">
+    <link rel="lazy-import" group="loading" href="crew-team-manager-fleet-roster-list-loading.html">
     <link rel="lazy-import" group="results" href="crew-team-manager-fleet-roster-list-results.html">
-    <link rel="lazy-import" group="message" href="../crew-team-manager-roster/crew-team-manager-roster-list-message.html">
+    <link rel="lazy-import" group="message" href="crew-team-manager-fleet-roster-list-message.html">
     <template>
         <style>
              :host {
@@ -65,9 +65,12 @@
         <firebase-query app-name="laborsync-ctm" id="query" path="/teamAthletes/{{teamId}}" data="{{_data}}">
         </firebase-query>
 
-        <app-header-layout id="layout">
+        <firebase-document id="firebase" app-name="laborsync-ctm">
+        </firebase-document>
 
-            <app-header reveals>
+        <app-header-layout id="layout" has-scrolling-region fullbleed>
+
+            <app-header slot="header" reveals>
                 <app-toolbar id="toolbar">
                     <paper-icon-button id="back" icon="arrow-back" on-click="_handleActionBack"></paper-icon-button>
                     <div main-title id="title">Select Athletes To Add</div>
@@ -75,13 +78,12 @@
                 </app-toolbar>
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
-                <crew-team-manager-roster-list-loading id="loading"></crew-team-manager-roster-list-loading>
-                <crew-team-manager-roster-list-results id="results" data="[[_data]]"></crew-team-manager-roster-list-results>
-                <crew-team-manager-roster-list-message id="message"></crew-team-manager-roster-list-message>
+                <crew-team-manager-fleet-roster-list-loading id="loading"></crew-team-manager-fleet-roster-list-loading>
+                <crew-team-manager-fleet-roster-list-results id="results" data="[[_data]]" on-crew-team-manager-fleet-roster-list-results-action-select-athletes="_selectAthletes"></crew-team-manager-fleet-roster-list-results>
+                <crew-team-manager-fleet-roster-list-message id="message"></crew-team-manager-fleet-roster-list-message>
             </iron-pages>
+
         </app-header-layout>
-
-
     </template>
 
     <script>
@@ -110,13 +112,53 @@
                         type: Object
                     },
 
-                    teamId: String
+                    teamId: String,
 
+                    selectedAthletes: {
+                        type: Array,
+                        value: []
+                    },
+
+                    boat: {
+                        type: String,
+                        value: ''
+                    }
                 }
             }
 
+            _selectAthletes(e) {
+
+                for (let x = 0; x < this.selectedAthletes.length; x++) {
+                    if (this.selectedAthletes[x] == e.detail.athlete) {
+                        this.selectedAthletes.splice(x, x);
+                        return;
+                    }
+                }
+
+                this.selectedAthletes.push(e.detail.athlete)
+            }
+
             _handleActionAdd() {
-                console.log('add athletes to the boat')
+                let path;
+                for (let x = 0; x < this.selectedAthletes.length; x++) {
+                    path = 'boatAthletes/' + this.boat + '/' + this.selectedAthletes[x]
+                    console.log(path)
+                    this.$.firebase.saveValue('boatAthletes', this.boat)
+                        .then(() => {
+
+                            this.$.firebase.setStoredValue(path, true);
+
+
+                        });
+                }
+                this.dispatchEvent(new CustomEvent(crewTeamManagerFleetRosterList.is +
+                    '-action-add-athletes', {
+                        bubbles: true,
+                        composed: true,
+                        detail: {
+                            athletes: this.selectedAthletes
+                        }
+                    }));
             }
 
             _handleActionBack() {
@@ -144,8 +186,6 @@
                         page = 'results';
                     }
                 }
-
-                console.log(dataSplices);
 
                 this.page = page;
 
